# drago

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish-to-npm.yml
client_tests/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.d.ts
client_tests/src/: logograms.test.ts  vitest-setup.ts
src/: aggregator.rs  dtos.rs  errors.rs  generator.rs  lib.rs  settings.rs  utils.rs
src/dtos/: decimal.rs  error.rs  errors.rs  fraction.rs  linear_time.rs  mod.rs  variant.rs
src/dtos/currency/: mod.rs  renminbi.rs  style.rs
src/dtos/date/: date_pattern.rs  mod.rs  week_format.rs
src/dtos/ranges/: signed.rs  unsigned.rs
src/error/: error_code.rs  mod.rs
src/logograms/: facade.rs  logic.rs  mod.rs
src/oldSettings/: linear_time.rs  mod.rs  variant.rs
src/params/: decimal.rs  fraction.rs  mod.rs
src/settings/: decimal.rs  dto_macros.rs  fraction.rs  fractions.rs  linear_time.rs  mod.rs  ranges.rs  variant.rs
src/settings/currency/: mod.rs
src/settings/dto/: decimal.rs  fractions.rs  linear_time.rs  mod.rs  money.rs  ranges.rs  variant.rs
src/settings/dtos/: fractions.rs  ranges.rs
src/settings/error/: mod.rs  source.rs
tests/: web.rs
