[package]
name = "drago"
version = "0.1.0"
authors = ["Gianluca Costa <gianluca@gianlucacosta.info>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
chinese-rand = { version = "0.1.0", features = [
    "digit-sequence",
    "currency",
    "gregorian",
] }
chinese-format = { version = "0.8.0", features = [
    "digit-sequence",
    "currency",
    "gregorian",
] }
wasm-bindgen = "0.2.92"
tsify = "0.4.5"
serde = { version = "1.0.202", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
