[package]
name = "drago"
version = "0.1.0"
publish = false
authors = ["Gianluca Costa <gianluca@gianlucacosta.info>"]
edition = "2021"
description = "Random generator of sinograms in your browser"
repository = "https://github.com/giancosta86/drago"
license = "MIT"
keywords = ["random", "Chinese", "logograms", "browser"]
include = [
    "LICENSE",
    "README.md",
    "/benches/",
    "/examples/",
    "/src/",
    "/tests/",
]

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
fastrand = "2.1.0"
chinese-rand = { version = "0.1.0", features = [
    "digit-sequence",
    "currency",
    "gregorian",
] }
chinese-format = { version = "0.8.0", features = [
    "digit-sequence",
    "currency",
    "gregorian",
] }
wasm-bindgen = "0.2.92"
tsify = "0.4.5"
serde = { version = "1.0.203", features = ["derive"] }
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true

[package.metadata.docs.rs]
all-features = true
